// Vitest Snapshot v1

exports[`labels > $ > should transform labels with block expressions 1`] = `
"import { createEffect as _createEffect } from \\"solid-js\\";

_createEffect(() => {
  console.log(x);
});"
`;

exports[`labels > $ > should transform labels with expressions 1`] = `
"import { createEffect as _createEffect } from \\"solid-js\\";

_createEffect(() => console.log(x));"
`;

exports[`labels > $ > should transform labels with variable declarations 1`] = `
"import { createMemo as _createMemo } from \\"solid-js\\";

const _x = _createMemo(() => 0);"
`;

exports[`labels > cleanup > should transform labels 1`] = `
"import { onCleanup as _onCleanup } from \\"solid-js\\";

_onCleanup(() => {
  console.log(count);
});"
`;

exports[`labels > cleanup > should transform labels with expressions 1`] = `
"import { onCleanup as _onCleanup } from \\"solid-js\\";

_onCleanup(myFunction);"
`;

exports[`labels > computed > should transform labels 1`] = `
"import { createComputed as _createComputed } from \\"solid-js\\";

_createComputed(() => {
  console.log(count);
});"
`;

exports[`labels > computed > should transform labels with expressions 1`] = `
"import { createComputed as _createComputed } from \\"solid-js\\";

_createComputed(myFunction);"
`;

exports[`labels > computed > should transform labels with names 1`] = `
"import { createComputed as _createComputed } from \\"solid-js\\";

_createComputed(() => {
  console.log(count);
}, undefined, {
  name: \\"countLog\\"
});"
`;

exports[`labels > effect > should transform labels 1`] = `
"import { createEffect as _createEffect } from \\"solid-js\\";

_createEffect(() => {
  console.log(count);
});"
`;

exports[`labels > effect > should transform labels with expressions 1`] = `
"import { createEffect as _createEffect } from \\"solid-js\\";

_createEffect(myFunction);"
`;

exports[`labels > effect > should transform labels with names 1`] = `
"import { createEffect as _createEffect } from \\"solid-js\\";

_createEffect(() => {
  console.log(count);
}, undefined, {
  name: \\"countLog\\"
});"
`;

exports[`labels > error > should transform labels 1`] = `
"import { onError as _onError } from \\"solid-js\\";

_onError(() => {
  console.log(count);
});"
`;

exports[`labels > error > should transform labels with expressions 1`] = `
"import { onError as _onError } from \\"solid-js\\";

_onError(myFunction);"
`;

exports[`labels > memo > should transform labelled variables 1`] = `
"import { createMemo as _createMemo } from \\"solid-js\\";

const _count = _createMemo(() => 0);"
`;

exports[`labels > memo > should transform labelled variables and add name 1`] = `
"import { createMemo as _createMemo } from \\"solid-js\\";

const _count = _createMemo(() => 0, undefined, {
  name: \\"count\\"
});"
`;

exports[`labels > memo > should variable read 1`] = `
"import { createMemo as _createMemo } from \\"solid-js\\";

const _count = _createMemo(() => 0);

console.log(_count());"
`;

exports[`labels > mount > should transform labels 1`] = `
"import { onMount as _onMount } from \\"solid-js\\";

_onMount(() => {
  console.log(count);
});"
`;

exports[`labels > mount > should transform labels with expressions 1`] = `
"import { onMount as _onMount } from \\"solid-js\\";

_onMount(myFunction);"
`;

exports[`labels > renderEffect > should transform labels 1`] = `
"import { createRenderEffect as _createRenderEffect } from \\"solid-js\\";

_createRenderEffect(() => {
  console.log(count);
});"
`;

exports[`labels > renderEffect > should transform labels with expressions 1`] = `
"import { createRenderEffect as _createRenderEffect } from \\"solid-js\\";

_createRenderEffect(myFunction);"
`;

exports[`labels > renderEffect > should transform labels with names 1`] = `
"import { createRenderEffect as _createRenderEffect } from \\"solid-js\\";

_createRenderEffect(() => {
  console.log(count);
}, undefined, {
  name: \\"countLog\\"
});"
`;

exports[`labels > signal > should transform labelled variables 1`] = `
"import { createSignal as _createSignal } from \\"solid-js\\";

const [_count, _setcount] = _createSignal(0);"
`;

exports[`labels > signal > should transform labelled variables and add name 1`] = `
"import { createSignal as _createSignal } from \\"solid-js\\";

const [_count, _setcount] = _createSignal(0, {
  name: \\"count\\"
});"
`;

exports[`labels > signal > should variable read 1`] = `
"import { createSignal as _createSignal } from \\"solid-js\\";

const [_count, _setcount] = _createSignal(0);

console.log(_count());"
`;

exports[`labels > signal > should variable write 1`] = `
"import { createSignal as _createSignal } from \\"solid-js\\";

const [_count, _setcount] = _createSignal(0);

_setcount(() => 1);"
`;
